--- a/index.html
+++ b/index.html
@@ -15,26 +15,44 @@
     header {
       position: relative;
       height: 80vh;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       text-align: center;
+      overflow: hidden;
     }
-    header img {
-      position: absolute;
-      top: 0;
-      left: 0;
+    header img.hero {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      position: absolute;
+      top: 0;
+      left: 0;
       z-index: -1;
     }
     header h1 {
+      position: relative;
+      color: white;
       font-size: 3em;
       background-color: rgba(0, 0, 0, 0.6);
+      display: inline-block;
       padding: 1rem;
+      margin-top: 20vh;
       border-radius: 10px;
+    }
+    .thumbnail-row {
+      position: absolute;
+      bottom: 10px;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      padding: 0 10px;
+    }
+    .thumbnail-row img {
+      width: 100px;
+      height: 70px;
+      object-fit: cover;
+      border: 2px solid white;
+      border-radius: 5px;
     }
     .container {
       max-width: 1000px;
@@ -74,8 +92,14 @@
 </head>
 <body>
   <header>
-    <img src="https://a0.muscache.com/im/pictures/miso/Hosting-48973014/original/84e14ba2-0a20-4b5c-b145-5e661e0c4df0.jpeg" alt="Bryce Resort Cabin Cover Photo">
+    <img class="hero" src="https://i.imgur.com/oqs2KT2.jpg" alt="Main Cabin Image">
     <h1>Relax & Recharge at Bryce Resort</h1>
+    <div class="thumbnail-row">
+      <img src="https://i.imgur.com/Sx2zyux.jpg" alt="Cabin 1">
+      <img src="https://i.imgur.com/JNICYNG.jpg" alt="Cabin 2">
+      <img src="https://i.imgur.com/RbSFems.jpg" alt="Cabin 3">
+      <img src="https://i.imgur.com/Eo2T0p2.jpg" alt="Cabin 4">
+    </div>
   </header>
 
   <div class="container">
