--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       padding: 0 10px;
     }
     .thumbnail-row img {
-      width: 100px;
-      height: 70px;
+      width: 200px;
+      height: 140px;
       object-fit: cover;
       border: 2px solid white;
       border-radius: 5px;
@@ -88,6 +88,16 @@
       text-align: center;
       padding: 1rem 0;
     }
+    .accolades {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    .accolades img {
+      width: 100px;
+      height: auto;
+    }
   </style>
 </head>
 <body>
@@ -105,19 +115,27 @@
   <div class="container">
     <section>
       <h2>Charming 3BR Cabin in the Woods</h2>
-      <p>Located just 5 minutes from Bryce Resort, this modern and cozy cabin is perfect for families or small groups. The home offers 3 bedrooms, 5 beds, and 2 bathrooms, comfortably sleeping up to 6 guests. Enjoy the deck with forest views, a fire pit, and all the essentials for a relaxing mountain escape.</p>
+      <p>Welcome to our cozy 3-bedroom cabin nestled in the serene woods, just 5 minutes from Bryce Resort. This modern yet rustic retreat comfortably sleeps up to 6 guests and features:</p>
+      <ul>
+        <li>Spacious living area with a wood-burning fireplace</li>
+        <li>Fully equipped kitchen with modern appliances</li>
+        <li>Private deck with forest views and outdoor seating</li>
+        <li>Fire pit for evening gatherings under the stars</li>
+        <li>High-speed Wi-Fi and Smart TV for entertainment</li>
+        <li>Family-friendly amenities including bunk beds and baby gear</li>
+      </ul>
+      <p>Whether you're seeking adventure or relaxation, our cabin offers the perfect getaway in the heart of nature.</p>
       <a class="btn" href="https://www.airbnb.com/rooms/48973014" target="_blank">Book on Airbnb</a>
     </section>
 
     <section>
-      <h2>Amenities</h2>
-      <ul>
-        <li>Fully equipped kitchen</li>
-        <li>High-speed WiFi & Smart TV</li>
-        <li>Outdoor fire pit & grill</li>
-        <li>Kid-friendly with bunk beds and baby gear</li>
-        <li>Private deck surrounded by trees</li>
-      </ul>
+      <h2>Our Airbnb Accolades</h2>
+      <div class="accolades">
+        <img src="https://tse4.mm.bing.net/th?id=OIP.uKt4M8RUcjYseLqY6H04lAHaEb&pid=Api" alt="Guest Favorite Badge">
+        <p>We're proud to be recognized as a <strong>Guest Favorite</strong> on Airbnb, a distinction awarded to the top-rated homes based on guest reviews and reliability.</p>
+        <img src="https://tse2.mm.bing.net/th?id=OIP.t9qboDUmBLPbs3h6zz2mVQHaFy&pid=Api" alt="5-Star Review Badge">
+        <p>Our guests consistently rate us 5 stars for cleanliness, communication, and overall experience.</p>
+      </div>
     </section>
 
     <section>
