--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <li>Family-friendly amenities including bunk beds and baby gear</li>
       </ul>
       <p>Whether you're seeking adventure or relaxation, our cabin offers the perfect getaway in the heart of nature.</p>
-      <a class="btn" href="https://www.airbnb.com/rooms/48973014" target="_blank">Book on Airbnb</a>
+      <a class="btn" href="airbnb.com/h/bryce-mountain-view" target="_blank">Book on Airbnb</a>
     </section>
 
     <section>
