--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section>
       <h2>Our Airbnb Accolades</h2>
       <div class="accolades">
-        <img src="https://tse4.mm.bing.net/th?id=OIP.uKt4M8RUcjYseLqY6H04lAHaEb&pid=Api" alt="Guest Favorite Badge">
+        <img src="https://www.airbnb.com/rooms/48973014/reviews?search_mode=regular_search&adults=1&check_in=2025-05-31&check_out=2025-06-05&children=0&infants=0&pets=0&source_impression_id=p3_1747162998_P3qFYRZT-vuu15iB&previous_page_section_name=1000&federated_search_id=b94f61c9-9459-470a-8184-b33e2b8a4905" alt="Guest Favorite Badge">
         <p>We're proud to be recognized as a <strong>Guest Favorite</strong> on Airbnb, a distinction awarded to the top-rated homes based on guest reviews and reliability.</p>
         <img src="https://tse2.mm.bing.net/th?id=OIP.t9qboDUmBLPbs3h6zz2mVQHaFy&pid=Api" alt="5-Star Review Badge">
         <p>Our guests consistently rate us 5 stars for cleanliness, communication, and overall experience.</p>
