--- a/index.html
+++ b/index.html
@@ -115,23 +115,22 @@
   <div class="container">
     <section>
       <h2>Charming 3BR Cabin in the Woods</h2>
-      <p>Welcome to our cozy 3-bedroom cabin nestled in the serene woods, just 5 minutes from Bryce Resort. This modern yet rustic retreat comfortably sleeps up to 6 guests and features:</p>
+      <p>Welcome to our cozy 5-bedroom cabin nestled in the serene woods, just 5 minutes from Bryce Resort. This modern yet rustic retreat comfortably sleeps up to 10 guests and features:</p>
       <ul>
         <li>Spacious living area with a wood-burning fireplace</li>
         <li>Fully equipped kitchen with modern appliances</li>
-        <li>Private deck with forest views and outdoor seating</li>
+        <li>Private deck with gorgeous mountain views and outdoor seating</li>
         <li>Fire pit for evening gatherings under the stars</li>
         <li>High-speed Wi-Fi and Smart TV for entertainment</li>
-        <li>Family-friendly amenities including bunk beds and baby gear</li>
+        <li>Family-friendly amenities including a game room with Golden Tee, Pool Table, board games, a poker set and more!</li>
       </ul>
       <p>Whether you're seeking adventure or relaxation, our cabin offers the perfect getaway in the heart of nature.</p>
-      <a class="btn" href="airbnb.com/h/bryce-mountain-view" target="_blank">Book on Airbnb</a>
+      <a class="btn" href="http://www.airbnb.com/h/bryce-mountain-view" target="_blank">Book on Airbnb</a>
     </section>
 
     <section>
       <h2>Our Airbnb Accolades</h2>
       <div class="accolades">
-        <img src="https://www.airbnb.com/rooms/48973014/reviews?search_mode=regular_search&adults=1&check_in=2025-05-31&check_out=2025-06-05&children=0&infants=0&pets=0&source_impression_id=p3_1747162998_P3qFYRZT-vuu15iB&previous_page_section_name=1000&federated_search_id=b94f61c9-9459-470a-8184-b33e2b8a4905" alt="Guest Favorite Badge">
         <p>We're proud to be recognized as a <strong>Guest Favorite</strong> on Airbnb, a distinction awarded to the top-rated homes based on guest reviews and reliability.</p>
         <img src="https://tse2.mm.bing.net/th?id=OIP.t9qboDUmBLPbs3h6zz2mVQHaFy&pid=Api" alt="5-Star Review Badge">
         <p>Our guests consistently rate us 5 stars for cleanliness, communication, and overall experience.</p>
@@ -142,7 +141,7 @@
       <h2>Things to Do Nearby</h2>
       <ul>
         <li>Golfing, skiing, and lake activities at Bryce Resort</li>
-        <li>Hiking in George Washington National Forest</li>
+        <li>Hiking trails with varying levels of difficulty</li>
         <li>Wineries, caverns, and local dining</li>
       </ul>
     </section>
