--- a/index.html
+++ b/index.html
@@ -114,15 +114,16 @@
 
   <div class="container">
     <section>
-      <h2>Charming 3BR Cabin in the Woods</h2>
+      <h2>Charming 5BR Cabin in the Woods</h2>
       <p>Welcome to our cozy 5-bedroom cabin nestled in the serene woods, just 5 minutes from Bryce Resort. This modern yet rustic retreat comfortably sleeps up to 10 guests and features:</p>
       <ul>
         <li>Spacious living area with a wood-burning fireplace</li>
         <li>Fully equipped kitchen with modern appliances</li>
+        <li>4 full bathrooms with dual sinks and overhead showers</li>
         <li>Private deck with gorgeous mountain views and outdoor seating</li>
-        <li>Fire pit for evening gatherings under the stars</li>
+        <li>Gas fire pit for evening gatherings under the stars</li>
         <li>High-speed Wi-Fi and Smart TV for entertainment</li>
-        <li>Family-friendly amenities including a game room with Golden Tee, Pool Table, board games, a poker set and more!</li>
+        <li>Family-friendly amenities including a game room with Golden Tee, Pool Table, Board Games, Poker Set and more!</li>
       </ul>
       <p>Whether you're seeking adventure or relaxation, our cabin offers the perfect getaway in the heart of nature.</p>
       <a class="btn" href="http://www.airbnb.com/h/bryce-mountain-view" target="_blank">Book on Airbnb</a>
