--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <div class="container">
     <section>
-      <h2>Charming 5BR Cabin in the Woods</h2>
+      <h2>Charming 5BR Cabin with spectacular views</h2>
       <p>Welcome to our cozy 5-bedroom cabin nestled in the serene woods, just 5 minutes from Bryce Resort. This modern yet rustic retreat comfortably sleeps up to 10 guests and features:</p>
       <ul>
         <li>Spacious living area with a wood-burning fireplace</li>
