--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
       <h2>Our Airbnb Accolades</h2>
       <div class="accolades">
         <p>We're proud to be recognized as a <strong>Guest Favorite</strong> on Airbnb, a distinction awarded to the top-rated homes based on guest reviews and reliability.</p>
-        <img src="https://imgur.com/6wN2RKr" alt="5-Star Review Badge">
+        <img src="https://imgur.com/6wN2RKr.jpg" alt="5-Star Review Badge">
         <p>Our guests consistently rate us 5 stars for cleanliness, communication, and overall experience.</p>
       </div>
     </section>
