--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <body>
   <header>
     <img class="hero" src="https://i.imgur.com/oqs2KT2.jpg" alt="Main Cabin Image">
-    <h1>Relax & Recharge at Bryce Resort</h1>
+    <h1>Breathtaking Views at Bryce Resort</h1>
     <div class="thumbnail-row">
       <img src="https://i.imgur.com/Sx2zyux.jpg" alt="Cabin 1">
       <img src="https://i.imgur.com/JNICYNG.jpg" alt="Cabin 2">
