--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <div class="container">
     <section>
       <h2>Charming 5BR Cabin with spectacular views</h2>
-      <p>Welcome to our cozy 5-bedroom cabin nestled in the serene woods, just 5 minutes from Bryce Resort. This modern yet rustic retreat comfortably sleeps up to 10 guests and features:</p>
+      <p>Welcome to our cozy 5-bedroom cabin nestled in the foothills of the Allegheny Mountains, just 5 minutes from Bryce Resort and 45 minutes to the famous Skyline Drive in the Shenandoah National Park. This modern yet rustic retreat comfortably sleeps up to 10 guests and features:</p>
       <ul>
         <li>Spacious living area with a wood-burning fireplace</li>
         <li>Fully equipped kitchen with modern appliances</li>
