--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
       <h2>Our Airbnb Accolades</h2>
       <div class="accolades">
         <p>We're proud to be recognized as a <strong>Guest Favorite</strong> on Airbnb, a distinction awarded to the top-rated homes based on guest reviews and reliability.</p>
-        <div style="text-align: center; margin: 2rem 0;">
-  <img src="https://imgur.com/6wN2RKr.jpg" alt="5-Star Review Badge" style="width: 1200px; max-width: 100%; height: auto;">
+       <div style="text-align: center; margin: 2rem 0;">
+  <img src="https://imgur.com/6wN2RKr.jpg" alt="5-Star Review Badge" style="display: block; margin: 0 auto; width: 1200px; max-width: 100%; height: auto;">
 </div>
+
 
         <p>Our guests consistently rate us 5 stars for cleanliness, communication, and overall experience.</p>
       </div>
